# cookiecutter-aprsd-extension

./: README.rst  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.extension_name}}/: README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.extension_name}}/docs/: installation.rst
{{cookiecutter.extension_name}}/licenses/: BSD-3
{{cookiecutter.extension_name}}/{{cookiecutter.module_name}}/: extension.py  utils.py
{{cookiecutter.extension_name}}/{{cookiecutter.module_name}}/cmds/: __init__.py  {{cookiecutter.extension_command_name}}.py
{{cookiecutter.extension_name}}/{{cookiecutter.module_name}}/conf/: main.py
