[metadata]
name = {{cookiecutter.extension_name}}
long_description = file: README.rst
long_description_content_type = text/x-rst
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
license_file = LICENSE
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description_file =
    README.rst
summary = {{cookiecutter.short_description}}

[global]
setup-hooks =
    pbr.hooks.setup_hook

[options]
include_package_data = True
packages=find:

[files]
packages =
    {{cookiecutter.module_name}}

[entry_points]
aprsd.extension =
    {{cookiecutter.extension_command_name}} = {{cookiecutter.module_name}}.extension
oslo.config.opts =
    {{cookiecutter.module_name}}.conf = {{cookiecutter.module_name}}.conf.opts:list_opts


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
build-dir = docs/_build

[mypy]
ignore_missing_imports = True
strict = True

[bdist_wheel]
universal = 1
